<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
       <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/UserName"></TextView>
            <EditText android:layout_height="wrap_content" android:id="@+id/editTextUsername" android:inputType="textNoSuggestions" android:layout_width="fill_parent"></EditText>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Password"></TextView>
            <EditText android:layout_height="wrap_content" android:id="@+id/editTextPassword" android:inputType="textPassword" android:layout_width="fill_parent"></EditText>
    
<Button android:layout_gravity="center" android:id="@+id/buttonGetRaceList" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/getRaceList"></Button>




</LinearLayout>
